  the required libraries and a suitable Clang-based compiler.
- Intel compilers supporting `-tcollect` for instrumentation (i.e., the
  classic icc, icpc, ifort) will switch back to this option, instead of
  using `-finstrument-functions`. The former allows for compile-time
  filtering. The Clang-based icx, icpx, and ifx will continue to use
  `-finstrument-functions`.

Compatibility:

- The usage of POMP user instrumentation, aka `#pragma pomp ...`, is
  deprecated. Use the `SCOREP_USER_*` macros instead.
- Non-LLVM based CCE compilers are no longer supported. Please upgrade.
- Added the environment variable `NVCC` to change the compiler
  command used for checking the NVIDIA CUDA compiler during configure.
- Remove OpenACC configure options and environment variables to
  specify include paths to `openacc.h` and `acc_prof.h`. Compilers
  implementing OpenACC know where to find the header files.
- Added flag `--disable-libwrap-generator` to disable the build
  of the library wrapper generator. While `--without-llvm` still
  disables this build as well, `--with-llvm=<path>` will not
  cause configure to fail if the requirements for the generator
  build cannot be satisfied anymore.
- External dependencies which can be downloaded via `--with-lib<foo>=download`
  at configure time, can now be provided via `build-config/packages` or
  `--with-package-cache=<path>`. Run `build-config/packages.sh` to list
  all packages and their respective download URL.
- For unwind, bfd and lustreapi additional `LIBS`, `LDFLAGS` and
  `CPPFLAGS` can be passed during configure (e.g. via `LIBBFD_EXTRA_LIBS`) to
  ensure that these libraries are detected correctly.

Bugfixes:

- Prevent the OMPT adapter from aborting when nested undeferred
  OpenMP tasks report task underflows.
- Enabling the CUDA / HIP adapter together with the OMPT adapter will no
  longer cause a segmentation fault with LLVM 16.0 and newer when OpenMP
  offloading flags are used.